--- a/examples/canvas_effects_stereo.html
+++ b/examples/canvas_effects_stereo.html
@@ -50,12 +50,12 @@
 				container = document.createElement( 'div' );
 				document.body.appendChild( container );
 
-				camera = new THREE.PerspectiveCamera( 60, window.innerWidth / window.innerHeight, 1, 10000 );
-				camera.position.z = 500;
+				camera = new THREE.PerspectiveCamera( 60, window.innerWidth / window.innerHeight, 1, 1000 );
+				camera.position.z = 50;
 
 				scene = new THREE.Scene();
 
-				var geometry = new THREE.BoxGeometry( 100, 100, 100 );
+				var geometry = new THREE.BoxGeometry( 10, 10, 10 );
 				var material = new THREE.MeshNormalMaterial( { overdraw: 0.5 } );
 
 				group = new THREE.Group();
@@ -63,9 +63,9 @@
 				for ( var i = 0; i < 200; i ++ ) {
 
 					var mesh = new THREE.Mesh( geometry, material );
-					mesh.position.x = Math.random() * 2000 - 1000;
-					mesh.position.y = Math.random() * 2000 - 1000;
-					mesh.position.z = Math.random() * 2000 - 1000;
+					mesh.position.x = Math.random() * 200 - 100;
+					mesh.position.y = Math.random() * 200 - 100;
+					mesh.position.z = Math.random() * 200 - 100;
 					mesh.rotation.x = Math.random() * 2 * Math.PI;
 					mesh.rotation.y = Math.random() * 2 * Math.PI;
 					mesh.matrixAutoUpdate = false;
@@ -112,12 +112,10 @@
 
 			function onDocumentMouseMove(event) {
 
-				mouseX = ( event.clientX - windowHalfX ) * 10;
-				mouseY = ( event.clientY - windowHalfY ) * 10;
+				mouseX = event.clientX - windowHalfX;
+				mouseY = event.clientY - windowHalfY;
 
 			}
-
-			//
 
 			function animate() {
 
@@ -144,6 +142,6 @@
 			}
 
 		</script>
-
+		
 	</body>
 </html>
