--- a/examples/index.html
+++ b/examples/index.html
@@ -447,7 +447,7 @@
 				"canvas_camera_orthographic2",
 				"canvas_effects_stereo",
 				"canvas_geometry_birds",
-				"canvas_geometry_cube",
+				"canvas_geometry_box",
 				"canvas_geometry_earth",
 				"canvas_geometry_hierarchy",
 				"canvas_geometry_nurbs",
