--- a/examples/canvas_effects_stereo.html
+++ b/examples/canvas_effects_stereo.html
@@ -31,7 +31,7 @@
 
 			var camera, scene, renderer;
 
-			var geometry, group;
+			var group;
 
 			var effect;
 
@@ -50,12 +50,12 @@
 				container = document.createElement( 'div' );
 				document.body.appendChild( container );
 
-				camera = new THREE.PerspectiveCamera( 60, window.innerWidth / window.innerHeight, 1, 1000 );
-				camera.position.z = 50;
+				camera = new THREE.PerspectiveCamera( 60, window.innerWidth / window.innerHeight, 1, 100 );
+				camera.position.z = 5;
 
 				scene = new THREE.Scene();
 
-				var geometry = new THREE.BoxGeometry( 10, 10, 10 );
+				var geometry = new THREE.BoxGeometry( 1, 1, 1 );
 				var material = new THREE.MeshNormalMaterial( { overdraw: 0.5 } );
 
 				group = new THREE.Group();
@@ -63,9 +63,9 @@
 				for ( var i = 0; i < 200; i ++ ) {
 
 					var mesh = new THREE.Mesh( geometry, material );
-					mesh.position.x = Math.random() * 200 - 100;
-					mesh.position.y = Math.random() * 200 - 100;
-					mesh.position.z = Math.random() * 200 - 100;
+					mesh.position.x = Math.random() * 20 - 10;
+					mesh.position.y = Math.random() * 20 - 10;
+					mesh.position.z = Math.random() * 20 - 10;
 					mesh.rotation.x = Math.random() * 2 * Math.PI;
 					mesh.rotation.y = Math.random() * 2 * Math.PI;
 					mesh.matrixAutoUpdate = false;
@@ -91,8 +91,6 @@
 				stats.domElement.style.zIndex = 100;
 				container.appendChild( stats.domElement );
 
-				//
-
 				window.addEventListener( 'resize', onWindowResize, false );
 
 			}
@@ -112,8 +110,8 @@
 
 			function onDocumentMouseMove(event) {
 
-				mouseX = event.clientX - windowHalfX;
-				mouseY = event.clientY - windowHalfY;
+				mouseX = (event.clientX - windowHalfX) / 10;
+				mouseY = (event.clientY - windowHalfY) / 10;
 
 			}
 
