--- a/examples/canvas_geometry_hierarchy.html
+++ b/examples/canvas_geometry_hierarchy.html
@@ -46,12 +46,12 @@
 				container = document.createElement( 'div' );
 				document.body.appendChild( container );
 
-				camera = new THREE.PerspectiveCamera( 60, window.innerWidth / window.innerHeight, 1, 10000 );
-				camera.position.z = 500;
+				camera = new THREE.PerspectiveCamera( 60, window.innerWidth / window.innerHeight, 1, 100 );
+				camera.position.z = 5;
 
 				scene = new THREE.Scene();
 
-				var geometry = new THREE.BoxGeometry( 100, 100, 100 );
+				var geometry = new THREE.BoxGeometry( 1, 1, 1 );
 				var material = new THREE.MeshNormalMaterial( { overdraw: 0.5 } );
 
 				group = new THREE.Group();
@@ -59,9 +59,9 @@
 				for ( var i = 0; i < 200; i ++ ) {
 
 					var mesh = new THREE.Mesh( geometry, material );
-					mesh.position.x = Math.random() * 2000 - 1000;
-					mesh.position.y = Math.random() * 2000 - 1000;
-					mesh.position.z = Math.random() * 2000 - 1000;
+					mesh.position.x = Math.random() * 20 - 10;
+					mesh.position.y = Math.random() * 20 - 10;
+					mesh.position.z = Math.random() * 20 - 10;
 					mesh.rotation.x = Math.random() * 2 * Math.PI;
 					mesh.rotation.y = Math.random() * 2 * Math.PI;
 					mesh.matrixAutoUpdate = false;
@@ -104,8 +104,8 @@
 
 			function onDocumentMouseMove(event) {
 
-				mouseX = ( event.clientX - windowHalfX ) * 10;
-				mouseY = ( event.clientY - windowHalfY ) * 10;
+				mouseX = ( event.clientX - windowHalfX ) / 10;
+				mouseY = ( event.clientY - windowHalfY ) / 10;
 
 			}
 
