--- a/examples/canvas_interactive_voxelpainter.html
+++ b/examples/canvas_interactive_voxelpainter.html
@@ -28,7 +28,7 @@
 
 			var mouse, raycaster, isShiftDown = false;
 
-			var cubeGeometry = new THREE.BoxGeometry( 50, 50, 50 );
+			var cubeGeometry = new THREE.BoxGeometry( 5, 5, 5 );
 			var cubeMaterial = new THREE.MeshLambertMaterial( { color: 0x00ff80, overdraw: 0.5 } );
 
 			var objects = [];
@@ -49,15 +49,15 @@
 				info.innerHTML = '<a href="http://threejs.org" target="_blank">three.js</a> - voxel painter<br><strong>click</strong>: add voxel, <strong>shift + click</strong>: remove voxel, <a href="javascript:save()">save .png</a>';
 				container.appendChild( info );
 
-				camera = new THREE.PerspectiveCamera( 40, window.innerWidth / window.innerHeight, 1, 10000 );
-				camera.position.set( 500, 800, 1300 );
+				camera = new THREE.PerspectiveCamera( 40, window.innerWidth / window.innerHeight, 1, 1000 );
+				camera.position.set( 50, 80, 130 );
 				camera.lookAt( new THREE.Vector3() );
 
 				scene = new THREE.Scene();
 
 				// Grid
 
-				var size = 500, step = 50;
+				var size = 50, step = 5;
 
 				var geometry = new THREE.Geometry();
 
@@ -81,7 +81,7 @@
 				raycaster = new THREE.Raycaster();
 				mouse = new THREE.Vector2();
 
-				var geometry = new THREE.PlaneBufferGeometry( 1000, 1000 );
+				geometry = new THREE.PlaneBufferGeometry( 100, 100 );
 				geometry.rotateX( - Math.PI / 2 );
 
 				plane = new THREE.Mesh( geometry, new THREE.MeshBasicMaterial( { visible: false } ) );
@@ -89,7 +89,7 @@
 
 				objects.push( plane );
 
-				var material = new THREE.MeshBasicMaterial( { color: 0xff0000, wireframe: true } );
+				material = new THREE.MeshBasicMaterial( { color: 0xff0000, wireframe: true } );
 
 				// Lights
 
@@ -166,7 +166,7 @@
 
 						var voxel = new THREE.Mesh( cubeGeometry, cubeMaterial );
 						voxel.position.copy( intersect.point ).add( intersect.face.normal );
-						voxel.position.divideScalar( 50 ).floor().multiplyScalar( 50 ).addScalar( 25 );
+						voxel.position.divideScalar( 5 ).floor().multiplyScalar( 5 ).addScalar( 2.5 );
 						scene.add( voxel );
 
 						objects.push( voxel );
