--- a/examples/canvas_lines.html
+++ b/examples/canvas_lines.html
@@ -30,10 +30,6 @@
 			windowHalfX = window.innerWidth / 2,
 			windowHalfY = window.innerHeight / 2,
 
-			SEPARATION = 200,
-			AMOUNTX = 10,
-			AMOUNTY = 10,
-
 			camera, scene, renderer;
 
 			init();
@@ -41,14 +37,11 @@
 
 			function init() {
 
-				var container, separation = 100, amountX = 50, amountY = 50,
-				particles, particle;
-
-				container = document.createElement('div');
+				var container = document.createElement('div');
 				document.body.appendChild(container);
 
-				camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 1, 10000 );
-				camera.position.z = 100;
+				camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 1, 1000 );
+				camera.position.z = 10;
 
 				scene = new THREE.Scene();
 
@@ -74,7 +67,8 @@
 				} );
 
 				var geometry = new THREE.Geometry();
-
+				var particle;
+				
 				for ( var i = 0; i < 100; i ++ ) {
 
 					particle = new THREE.Sprite( material );
@@ -82,8 +76,7 @@
 					particle.position.y = Math.random() * 2 - 1;
 					particle.position.z = Math.random() * 2 - 1;
 					particle.position.normalize();
-					particle.position.multiplyScalar( Math.random() * 10 + 450 );
-					particle.scale.x = particle.scale.y = 10;
+					particle.position.multiplyScalar( Math.random() + 45 );
 					scene.add( particle );
 
 					geometry.vertices.push( particle.position );
@@ -164,8 +157,8 @@
 
 			function render() {
 
-				camera.position.x += ( mouseX - camera.position.x ) * .05;
-				camera.position.y += ( - mouseY + 200 - camera.position.y ) * .05;
+				camera.position.x += ( ( mouseX / 10 ) - camera.position.x ) * .05;
+				camera.position.y += ( - ( ( mouseY + 200 ) / 10 ) - camera.position.y ) * .05;
 				camera.lookAt( scene.position );
 
 				renderer.render( scene, camera );
