--- a/examples/canvas_effects_stereo.html
+++ b/examples/canvas_effects_stereo.html
@@ -110,8 +110,8 @@
 
 			function onDocumentMouseMove(event) {
 
-				mouseX = (event.clientX - windowHalfX) / 10;
-				mouseY = (event.clientY - windowHalfY) / 10;
+				mouseX = event.clientX - windowHalfX;
+				mouseY = event.clientY - windowHalfY;
 
 			}
 
@@ -126,8 +126,8 @@
 
 			function render() {
 
-				camera.position.x += ( mouseX - camera.position.x ) * .05;
-				camera.position.y += ( - mouseY - camera.position.y ) * .05;
+				camera.position.x += ( ( mouseX / 10 ) - camera.position.x ) * .05;
+				camera.position.y += ( ( - mouseY / 10 ) - camera.position.y ) * .05;
 				camera.lookAt( scene.position );
 
 				var currentSeconds = Date.now();
