--- a/examples/canvas_geometry_earth.html
+++ b/examples/canvas_geometry_earth.html
@@ -143,8 +143,8 @@
 
 			function onDocumentMouseMove( event ) {
 
-				mouseX = ( event.clientX - windowHalfX ) / 100;
-				mouseY = ( event.clientY - windowHalfY ) / 100;
+				mouseX = event.clientX - windowHalfX;
+				mouseY = event.clientY - windowHalfY;
 
 			}
 
@@ -161,8 +161,8 @@
 
 			function render() {
 
-				camera.position.x += ( mouseX - camera.position.x ) * 0.05;
-				camera.position.y += ( - mouseY - camera.position.y ) * 0.05;
+				camera.position.x += ( ( mouseX / 100 ) - camera.position.x ) * 0.05;
+				camera.position.y += ( ( - mouseY / 100 ) - camera.position.y ) * 0.05;
 				camera.lookAt( scene.position );
 
 				group.rotation.y -= 0.005;
