--- a/examples/canvas_geometry_panorama.html
+++ b/examples/canvas_geometry_panorama.html
@@ -43,9 +43,9 @@
 
 			var texture_placeholder,
 			isUserInteracting = false,
-			onMouseDownMouseX = 0, onMouseDownMouseY = 0,
-			lon = 90, onMouseDownLon = 0,
-			lat = 0, onMouseDownLat = 0,
+			onPointerDownPointerX = 0, onPointerDownPointerY = 0,
+			lon = 90, onPointerDownLon = 0,
+			lat = 0, onPointerDownLat = 0,
 			phi = 0, theta = 0,
 			target = new THREE.Vector3();
 
@@ -218,9 +218,9 @@
 				phi = THREE.Math.degToRad( 90 - lat );
 				theta = THREE.Math.degToRad( lon );
 
-				target.x = 500 * Math.sin( phi ) * Math.cos( theta );
-				target.y = 500 * Math.cos( phi );
-				target.z = 500 * Math.sin( phi ) * Math.sin( theta );
+				target.x = Math.sin( phi ) * Math.cos( theta );
+				target.y = Math.cos( phi );
+				target.z = Math.sin( phi ) * Math.sin( theta );
 
 				camera.lookAt( target );
 
