--- a/examples/canvas_geometry_panorama_fisheye.html
+++ b/examples/canvas_geometry_panorama_fisheye.html
@@ -43,9 +43,9 @@
 
 			var texture_placeholder,
 			isUserInteracting = false,
-			onMouseDownMouseX = 0, onMouseDownMouseY = 0,
-			lon = 90, onMouseDownLon = 0,
-			lat = 0, onMouseDownLat = 0,
+			onPointerDownPointerX = 0, onPointerDownPointerY = 0,
+			lon = 90, onPointerDownLon = 0,
+			lat = 0, onPointerDownLat = 0,
 			phi = 0, theta = 0,
 			target = new THREE.Vector3();
 
