--- a/examples/canvas_lines_colors_2d.html
+++ b/examples/canvas_lines_colors_2d.html
@@ -75,8 +75,8 @@
 				container = document.createElement( 'div' );
 				document.body.appendChild( container );
 
-				camera = new THREE.PerspectiveCamera( 33, window.innerWidth / window.innerHeight, 1, 10000 );
-				camera.position.z = 700;
+				camera = new THREE.PerspectiveCamera( 33, window.innerWidth / window.innerHeight, 1, 100 );
+				camera.position.z = 7;
 
 				scene = new THREE.Scene();
 
@@ -86,7 +86,7 @@
 				container.appendChild( renderer.domElement );
 
 				var geometry3 = new THREE.Geometry(),
-					points = hilbert2D( new THREE.Vector3( 0,0,0 ), 400.0, 4, 0, 1, 2, 3, 4, 5, 6, 7 ),
+					points = hilbert2D( new THREE.Vector3( 0,0,0 ), 4, 4, 0, 1, 2, 3, 4, 5, 6, 7 ),
 					colors3 = [];
 
 				for ( i = 0; i < points.length; i ++ ) {
@@ -191,8 +191,8 @@
 
 			function render() {
 
-				camera.position.x += ( mouseX - camera.position.x ) * .05;
-				camera.position.y += ( - mouseY + 200 - camera.position.y ) * .05;
+				camera.position.x += ( ( mouseX / 100 ) - camera.position.x ) * .05;
+				camera.position.y += ( ( ( - mouseY + 200 ) / 100 ) - camera.position.y ) * .05;
 
 				camera.lookAt( scene.position );
 
