--- a/examples/canvas_lines_dashed.html
+++ b/examples/canvas_lines_dashed.html
@@ -57,19 +57,19 @@
 
 			function init() {
 
-				camera = new THREE.PerspectiveCamera( 60, WIDTH / HEIGHT, 1, 200 );
-				camera.position.z = 150;
+				camera = new THREE.PerspectiveCamera( 60, WIDTH / HEIGHT, 1, 20 );
+				camera.position.z = 15;
 
 				scene = new THREE.Scene();
 
-				scene.fog = new THREE.Fog( 0x111111, 150, 200 );
+				scene.fog = new THREE.Fog( 0x111111, 15, 20 );
 
-				root = new THREE.Object3D();
+				var root = new THREE.Object3D();
 
 				var subdivisions = 6;
 				var recursion = 1;
 
-				var points = hilbert3D( new THREE.Vector3( 0,0,0 ), 25.0, recursion, 0, 1, 2, 3, 4, 5, 6, 7 );
+				var points = hilbert3D( new THREE.Vector3( 0,0,0 ), 2.5, recursion, 0, 1, 2, 3, 4, 5, 6, 7 );
 
 				var spline = new THREE.Spline( points );
 				var geometrySpline = new THREE.Geometry();
@@ -83,7 +83,7 @@
 
 				}
 
-				var geometryCube = cube( 50 );
+				var geometryCube = cube( 5 );
 
 				geometryCube.computeLineDistances();
 				geometrySpline.computeLineDistances();
@@ -93,7 +93,7 @@
 				objects.push( object );
 				scene.add( object );
 
-				var object = new THREE.LineSegments( geometryCube, new THREE.LineDashedMaterial( { color: 0xffaa00, dashSize: 3, gapSize: 1, linewidth: 2 } ) );
+				object = new THREE.LineSegments( geometryCube, new THREE.LineDashedMaterial( { color: 0xffaa00, dashSize: 3, gapSize: 1, linewidth: 2 } ) );
 
 				objects.push( object );
 				scene.add( object );
@@ -192,7 +192,6 @@
 
 					var object = objects[ i ];
 
-					//object.rotation.x = 0.25 * time * ( i%2 == 1 ? 1 : -1);
 					object.rotation.x = 0.25 * time;
 					object.rotation.y = 0.25 * time;
 
