--- a/examples/canvas_materials_normal.html
+++ b/examples/canvas_materials_normal.html
@@ -56,8 +56,8 @@
 
 				var container = document.getElementById( 'container' );
 
-				camera = new THREE.PerspectiveCamera( 60, window.innerWidth / window.innerHeight, 1, 2000 );
-				camera.position.set( 0, - 6, 100 );
+				camera = new THREE.PerspectiveCamera( 60, window.innerWidth / window.innerHeight, 1, 20 );
+				camera.position.set( 0, - 0.06, 5 );
 
 				scene = new THREE.Scene();
 
@@ -66,6 +66,8 @@
 
 					mesh = new THREE.Mesh( geometry, new THREE.MeshNormalMaterial( { overdraw: 0.5 } ) );
 					scene.add( mesh );
+					
+					mesh.scale.set( 0.05, 0.05, 0.05 );
 
 				} );
 
