--- a/examples/canvas_materials_reflection.html
+++ b/examples/canvas_materials_reflection.html
@@ -57,8 +57,8 @@
 
 				var container = document.getElementById( 'container' );
 
-				camera = new THREE.PerspectiveCamera( 60, window.innerWidth / window.innerHeight, 1, 1000 );
-				camera.position.set( 0, - 6, 100 );
+				camera = new THREE.PerspectiveCamera( 60, window.innerWidth / window.innerHeight, 1, 10 );
+				camera.position.set( 0, - 0.06, 5 );
 
 				scene = new THREE.Scene();
 
@@ -68,6 +68,7 @@
 					geometry.computeVertexNormals();
 
 					mesh = new THREE.Mesh( geometry, new THREE.MeshBasicMaterial( { envMap: THREE.ImageUtils.loadTexture( 'textures/metal.jpg', THREE.SphericalReflectionMapping ), overdraw: 0.5 } ) );
+					mesh.scale.set( 0.05, 0.05, 0.05 );
 					scene.add( mesh );
 
 				} );
