--- a/examples/canvas_particles_floor.html
+++ b/examples/canvas_particles_floor.html
@@ -27,7 +27,7 @@
 
 		<script>
 
-			var SEPARATION = 100;
+			var SEPARATION = 1;
 			var AMOUNTX = 50;
 			var AMOUNTY = 50;
 
@@ -46,8 +46,8 @@
 				container = document.createElement( 'div' );
 				document.body.appendChild( container );
 
-				camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 1, 10000 );
-				camera.position.z = 1000;
+				camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 1, 100 );
+				camera.position.z = 10;
 
 				scene = new THREE.Scene();
 
@@ -58,7 +58,8 @@
 					for ( var iy = 0; iy < AMOUNTY; iy++ ) {
 
 						particle = new THREE.Sprite( material );
-						particle.scale.y = 20;
+						particle.scale.y = 0.2;
+						particle.scale.x = 0.01;
 						particle.position.x = ix * SEPARATION - ( ( AMOUNTX * SEPARATION ) / 2 );
 						particle.position.z = iy * SEPARATION - ( ( AMOUNTY * SEPARATION ) / 2 );
 						scene.add( particle );
@@ -143,8 +144,8 @@
 
 			function render() {
 
-				camera.position.x += ( mouseX - camera.position.x ) * .05;
-				camera.position.y += ( - mouseY - camera.position.y ) * .05;
+				camera.position.x += ( ( mouseX / 100 ) - camera.position.x ) * .05;
+				camera.position.y += ( ( - mouseY / 100 ) - camera.position.y ) * .05;
 				camera.lookAt( scene.position );
 
 				renderer.render( scene, camera );
