--- a/examples/canvas_particles_random.html
+++ b/examples/canvas_particles_random.html
@@ -42,8 +42,8 @@
 				container = document.createElement( 'div' );
 				document.body.appendChild( container );
 
-				camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 1, 3000 );
-				camera.position.z = 1000;
+				camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 1, 30 );
+				camera.position.z = 10;
 
 				scene = new THREE.Scene();
 
@@ -67,10 +67,10 @@
 					} );
 
 					particle = new THREE.Sprite( material );
-					particle.position.x = Math.random() * 2000 - 1000;
-					particle.position.y = Math.random() * 2000 - 1000;
-					particle.position.z = Math.random() * 2000 - 1000;
-					particle.scale.x = particle.scale.y = Math.random() * 20 + 10;
+					particle.position.x = Math.random() * 20 - 10;
+					particle.position.y = Math.random() * 20 - 10;
+					particle.position.z = Math.random() * 20 - 10;
+					particle.scale.x = particle.scale.y = Math.random() * 0.2 + 0.1;
 					group.add( particle );
 				}
 
@@ -153,8 +153,8 @@
 
 			function render() {
 
-				camera.position.x += ( mouseX - camera.position.x ) * 0.05;
-				camera.position.y += ( - mouseY - camera.position.y ) * 0.05;
+				camera.position.x += ( ( mouseX / 100 ) - camera.position.x ) * 0.05;
+				camera.position.y += ( ( - mouseY / 100 )- camera.position.y ) * 0.05;
 				camera.lookAt( scene.position );
 
 				group.rotation.x += 0.01;
