--- a/examples/canvas_particles_sprites.html
+++ b/examples/canvas_particles_sprites.html
@@ -43,8 +43,8 @@
 				container = document.createElement( 'div' );
 				document.body.appendChild( container );
 
-				camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 1, 5000 );
-				camera.position.z = 1000;
+				camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 1, 50 );
+				camera.position.z = 10;
 
 				scene = new THREE.Scene();
 
@@ -117,11 +117,11 @@
 
 			function initParticle( particle, delay ) {
 
-				var particle = this instanceof THREE.Sprite ? this : particle;
+				particle = this instanceof THREE.Sprite ? this : particle;
 				var delay = delay !== undefined ? delay : 0;
 
 				particle.position.set( 0, 0, 0 );
-				particle.scale.x = particle.scale.y = Math.random() * 32 + 16;
+				particle.scale.x = particle.scale.y = Math.random() * 0.32 + 0.16;
 
 				new TWEEN.Tween( particle )
 					.delay( delay )
@@ -131,7 +131,7 @@
 
 				new TWEEN.Tween( particle.position )
 					.delay( delay )
-					.to( { x: Math.random() * 4000 - 2000, y: Math.random() * 1000 - 500, z: Math.random() * 4000 - 2000 }, 10000 )
+					.to( { x: Math.random() * 40 - 20, y: Math.random() * 10 - 5, z: Math.random() * 40 - 20 }, 10000 )
 					.start();
 
 				new TWEEN.Tween( particle.scale )
@@ -190,8 +190,8 @@
 
 				TWEEN.update();
 
-				camera.position.x += ( mouseX - camera.position.x ) * 0.05;
-				camera.position.y += ( - mouseY - camera.position.y ) * 0.05;
+				camera.position.x += ( ( mouseX / 100 ) - camera.position.x ) * 0.05;
+				camera.position.y += ( ( - mouseY / 100 ) - camera.position.y ) * 0.05;
 				camera.lookAt( scene.position );
 
 				renderer.render( scene, camera );
