--- a/examples/misc_animation_authoring.html
+++ b/examples/misc_animation_authoring.html
@@ -43,7 +43,7 @@
 
 			function init() {
 
-				renderer = new THREE.WebGLRenderer();
+				renderer = new THREE.WebGLRenderer( { antialias : true } );
 				renderer.setPixelRatio( window.devicePixelRatio );
 				renderer.setSize( window.innerWidth, window.innerHeight );
 				renderer.sortObjects = false;
@@ -51,12 +51,12 @@
 
 				//
 
-				camera = new THREE.PerspectiveCamera( 70, window.innerWidth / window.innerHeight, 1, 3000 );
-				camera.position.set( 1000, 500, 1000 );
-				camera.lookAt( new THREE.Vector3( 0, 200, 0 ) );
+				camera = new THREE.PerspectiveCamera( 70, window.innerWidth / window.innerHeight, 1, 30 );
+				camera.position.set( 10, 5, 10 );
+				camera.lookAt( new THREE.Vector3( 0, 2, 0 ) );
 
 				scene = new THREE.Scene();
-				scene.add( new THREE.GridHelper( 500, 100 ) );
+				scene.add( new THREE.GridHelper( 5, 1 ) );
 
 				var light = new THREE.DirectionalLight( 0xffffff, 2 );
 				light.position.set( 1, 1, 1 );
@@ -66,7 +66,7 @@
 				var texture = THREE.ImageUtils.loadTexture( 'textures/crate.gif', THREE.UVMapping, render );
 				texture.anisotropy = renderer.getMaxAnisotropy();
 
-				var geometry = new THREE.BoxGeometry( 200, 200, 200 );
+				var geometry = new THREE.BoxGeometry( 2, 2, 2 );
 				var material = new THREE.MeshLambertMaterial( { map: texture } );
 
 				control = new THREE.TransformControls( camera, renderer.domElement );
@@ -90,7 +90,7 @@
 							break;
 
 						case 17: // Ctrl
-							control.setTranslationSnap( 100 );
+							control.setTranslationSnap( 1 );
 							control.setRotationSnap( THREE.Math.degToRad( 15 ) );
 							break;
 
@@ -152,8 +152,7 @@
 
 				];
 
-				new Timeliner(
-						new THREE.TimelinerController( scene, trackInfo, render ) );
+				new Timeliner( new THREE.TimelinerController( scene, trackInfo, render ) );
 
 			}
 
