--- a/examples/misc_lights_test.html
+++ b/examples/misc_lights_test.html
@@ -63,22 +63,22 @@
 				container = document.createElement('div');
 				document.body.appendChild(container);
 
-				camera = new THREE.PerspectiveCamera( 75, SCREEN_WIDTH / SCREEN_HEIGHT, 1, 100000 );
-				camera.position.z = 500;
+				camera = new THREE.PerspectiveCamera( 75, SCREEN_WIDTH / SCREEN_HEIGHT, 1, 1000 );
+				camera.position.z = 5;
 
 				scene = new THREE.Scene();
 
 				// Spheres
 
-				var geometry = new THREE.SphereGeometry( 100, 16, 8 );
+				var geometry = new THREE.SphereGeometry( 1, 16, 8 );
 				var material = new THREE.MeshLambertMaterial( { color: 0xffffff, shading: THREE.FlatShading, overdraw: 0.5 } );
 
 				for ( var i = 0; i < 30; i ++ ) {
 
 					mesh = new THREE.Mesh( geometry, material );
-					mesh.position.x = 500 * ( Math.random() - 0.5 );
-					mesh.position.y = 500 * ( Math.random() - 0.5 );
-					mesh.position.z = 500 * ( Math.random() - 0.5 );
+					mesh.position.x = 5 * ( Math.random() - 0.5 );
+					mesh.position.y = 5 * ( Math.random() - 0.5 );
+					mesh.position.z = 5 * ( Math.random() - 0.5 );
 					mesh.scale.x = mesh.scale.y = mesh.scale.z = 0.25 * ( Math.random() + 0.5 );
 					scene.add( mesh );
 
@@ -86,8 +86,8 @@
 
 				// Torus
 
-				var geometry = new THREE.TorusGeometry( 100, 25, 15, 30 );
-				var material = new THREE.MeshLambertMaterial( { color: 0xffffff, overdraw: 0.5 } );
+				geometry = new THREE.TorusGeometry( 1, 0.25, 15, 30 );
+				material = new THREE.MeshLambertMaterial( { color: 0xffffff, overdraw: 0.5 } );
 				mesh = new THREE.Mesh( geometry, material );
 				scene.add( mesh );
 
@@ -97,7 +97,7 @@
 				scene.add( ambient );
 
 				directionalLight = new THREE.DirectionalLight( 0xffffff );
-				directionalLight.position.set( 0, -70, 100 ).normalize();
+				directionalLight.position.set( 0, -0.7, 1 ).normalize();
 
 				setTimeout( function () {
 
@@ -108,9 +108,9 @@
 				pointLight = new THREE.PointLight( 0xffaa00 );
 				scene.add( pointLight );
 
-				var geometry = new THREE.SphereGeometry( 100, 8, 4 );
-				var material = new THREE.MeshBasicMaterial( { color: 0xffaa00 } );
-				var mesh = new THREE.Mesh( geometry, material );
+				geometry = new THREE.SphereGeometry( 1, 8, 4 );
+				material = new THREE.MeshBasicMaterial( { color: 0xffaa00 } );
+				mesh = new THREE.Mesh( geometry, material );
 				mesh.scale.set( 0.05, 0.05, 0.05 );
 				pointLight.add( mesh );
 
@@ -175,8 +175,8 @@
 
 				var delta = clock.getDelta();
 
-				camera.position.x += ( mouseX - camera.position.x ) * 0.05;
-				camera.position.y += ( - mouseY - camera.position.y ) * 0.05;
+				camera.position.x += ( ( mouseX / 100 ) - camera.position.x ) * 0.05;
+				camera.position.y += ( ( - mouseY / 100 ) - camera.position.y ) * 0.05;
 
 				camera.lookAt( scene.position );
 
@@ -204,8 +204,8 @@
 
 				var r = clock.getElapsedTime();
 
-				pointLight.position.x = 200 * Math.cos( r );
-				pointLight.position.z = 200 * Math.sin( r );
+				pointLight.position.x = 2 * Math.cos( r );
+				pointLight.position.z = 2 * Math.sin( r );
 
 				canvasRenderer.render( scene, camera );
 				webglRenderer.render( scene, camera );
