--- a/examples/software_lines_colors.html
+++ b/examples/software_lines_colors.html
@@ -72,8 +72,8 @@
 				container = document.createElement( 'div' );
 				document.body.appendChild( container );
 
-				camera = new THREE.PerspectiveCamera( 33, window.innerWidth / window.innerHeight, 1, 10000 );
-				camera.position.z = 700;
+				camera = new THREE.PerspectiveCamera( 33, window.innerWidth / window.innerHeight, 1, 100 );
+				camera.position.z = 7;
 
 				scene = new THREE.Scene();
 
@@ -85,7 +85,7 @@
 				var geometry = new THREE.Geometry(),
 				geometry2 = new THREE.Geometry(),
 				geometry3 = new THREE.Geometry(),
-				points = hilbert3D( new THREE.Vector3( 0,0,0 ), 200.0, 2, 0, 1, 2, 3, 4, 5, 6, 7 ),
+				points = hilbert3D( new THREE.Vector3( 0,0,0 ), 2.0, 2, 0, 1, 2, 3, 4, 5, 6, 7 ),
 				colors = [], colors2 = [], colors3 = [];
 
 				for ( i = 0; i < points.length; i ++ ) {
@@ -93,10 +93,10 @@
 					geometry.vertices.push( points[ i ] );
 
 					colors[ i ] = new THREE.Color( 0xffffff );
-					colors[ i ].setHSL( 0.6, 1.0, Math.max( 0, ( 200 - points[ i ].x ) / 400 ) * 0.5 + 0.5 );
+					colors[ i ].setHSL( 0.6, 1.0, Math.max( 0, ( 2 - points[ i ].x ) / 4 ) * 0.5 + 0.5 );
 
 					colors2[ i ] = new THREE.Color( 0xffffff );
-					colors2[ i ].setHSL( 0.3, 1.0, Math.max( 0, ( 200 + points[ i ].x ) / 400 ) * 0.5 );
+					colors2[ i ].setHSL( 0.3, 1.0, Math.max( 0, ( 2 + points[ i ].x ) / 4 ) * 0.5 );
 
 					colors3[ i ] = new THREE.Color( 0xffffff );
 					colors3[ i ].setHSL( i / points.length, 1.0, 0.5 );
@@ -113,7 +113,7 @@
 
 				material = new THREE.LineBasicMaterial( { color: 0xffffff, opacity: 1, linewidth: 3, vertexColors: THREE.VertexColors } );
 
-				var line, p, scale = 0.3, d = 225;
+				var line, p, scale = 0.3, d = 2.25;
 				var parameters =  [
 					[ material, scale*1.5, [-d,0,0],  geometry ],
 					[ material, scale*1.5, [0,0,0],  geometry2 ],
@@ -198,8 +198,8 @@
 
 			function render() {
 
-				camera.position.x += ( mouseX - camera.position.x ) * .05;
-				camera.position.y += ( - mouseY + 200 - camera.position.y ) * .05;
+				camera.position.x += ( ( mouseX / 100 ) - camera.position.x ) * .05;
+				camera.position.y += ( ( - mouseY / 100 ) + 2 - camera.position.y ) * .05;
 
 				camera.lookAt( scene.position );
 
